--- a/package.json
+++ b/package.json
@@ -124,16 +124,24 @@
     "webpack-target-electron-renderer": "^0.3.0"
   },
   "dependencies": {
+    "axios": "^0.9.1",
+    "body-parser": "^1.14.2",
+    "bootstrap": "^3.3.6",
     "electron-debug": "^0.5.1",
     "font-awesome": "^4.4.0",
     "history": "^1.17.0",
+    "json-loader": "^0.5.4",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.5",
     "react-router": "^1.0.3",
     "redux": "^3.0.5",
+    "redux-form": "^4.1.6",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^1.0.2"
+    "redux-thunk": "^1.0.2",
+    "sequelize": "^3.18.0",
+    "sequelize-cli": "^2.3.1",
+    "sqlite3": "^3.1.1"
   },
   "devEngines": {
     "node": "4.x || 5.x",
